--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.2",
+    "chart.js": "^4.5.0",
+    "mongodb": "^6.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "mongodb": "^6.3.0",
-    "axios": "^1.6.2"
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
