--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,17 @@
   "author": "Digital Krishi Officer Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mongodb": "^6.3.0",
-    "axios": "^1.6.2",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "morgan": "^1.10.0"
+    "helmet": "^7.1.0",
+    "mongodb": "^6.3.0",
+    "morgan": "^1.10.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
